Fix overflow on X

--- a/src/scss/elements/_body.scss
+++ b/src/scss/elements/_body.scss
@@ -9,4 +9,6 @@ html {
 body {
     background-color: var(--current-light-primary);
     color: var(--current-dark-secondary);
+    
+    overflow-x: hidden;
 }
