--- a/style.css
+++ b/style.css
@@ -356,7 +356,8 @@ html {
 
 body {
   background-color: var(--current-light-primary);
-  color: var(--current-dark-secondary); }
+  color: var(--current-dark-secondary);
+  overflow-x: hidden; }
 
 ::-webkit-input-placeholder {
   color: var(--theme-input-placeholder-color);
